cli/tests/snapshot/inputs/errors/enum_forall_parametricity_violation.ncl
# capture = 'stderr'
# command = ['eval']
let f : forall r. [| 'x; r |] -> [| 'y ; r |] =
  match { 'x => 'y, _ => 'z }
in f 'x
